# dispersion4Q

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/calibration_data/: wmt24_testset.json
environments/vllm/: pyproject.toml
experiments/: inference_formal.py  inference_vllm.py  merge_lora_for_vllm.py  print_results_tables.py  quantize_for_vllm.py  run.sh  run_hf.sh  run_vllm.sh  run_vllm_awq.sh  run_vllm_awq_beam5.sh  run_vllm_beam5.sh  run_vllm_eval_raw_model.sh  run_vllm_gptq.sh  run_vllm_gptq_beam5.sh  test_inference.sh  test_run.sh  test_xcomet_access.py  train_dispersion.sh
experiments/checkpoints/TowerInstruct-Mistral-7B-v0.2/5e-5-test/0/: README.md  adapter_config.json
experiments/configs/: vllm_awq.json  vllm_gptq.json
experiments/gemma-3-12b-it/: run_vllm.sh  run_vllm_awq.sh  run_vllm_eval_raw_model.sh  run_vllm_gptq.sh
experiments/model_configs/: google-gemma-3-12b-it.json  google-gemma-3-4b-it.json  mistral.json
results/TowerInstruct-Mistral-7B-v0.2/wmt24_testset/5e-5-test-beam5/0/en-ru/: comet.score  hyp.en-ru.ru  kiwi.score  xcomet.score
results/TowerInstruct-Mistral-7B-v0.2/wmt24_testset/5e-5-test-beam5/0/en-zh/: hyp.en-zh.zh
src/llama_recipes/: finetuning.py
src/llama_recipes/configs/: peft.py  training.py
src/llama_recipes/customer_data/: get_wmt24_plus.py
src/llama_recipes/customer_data/wmt24pp_testset/test/en-ar/: test.en-ar.ar
src/llama_recipes/customer_data/wmt24pp_testset/test/en-bg/: test.en-bg.bg
src/llama_recipes/customer_data/wmt24pp_testset/test/en-bn/: test.en-bn.bn
src/llama_recipes/customer_data/wmt24pp_testset/test/en-ca/: test.en-ca.ca
src/llama_recipes/customer_data/wmt24pp_testset/test/en-da/: test.en-da.da
src/llama_recipes/customer_data/wmt24pp_testset/test/en-el/: test.en-el.el
src/llama_recipes/customer_data/wmt24pp_testset/test/en-et/: test.en-et.et
src/llama_recipes/customer_data/wmt24pp_testset/test/en-fa/: test.en-fa.fa
src/llama_recipes/customer_data/wmt24pp_testset/test/en-fi/: test.en-fi.fi
src/llama_recipes/customer_data/wmt24pp_testset/test/en-fil/: test.en-fil.fil
src/llama_recipes/customer_data/wmt24pp_testset/test/en-fr/: test.en-fr.fr
src/llama_recipes/customer_data/wmt24pp_testset/test/en-gu/: test.en-gu.gu
src/llama_recipes/customer_data/wmt24pp_testset/test/en-he/: test.en-he.he
src/llama_recipes/customer_data/wmt24pp_testset/test/en-hr/: test.en-hr.hr
src/llama_recipes/customer_data/wmt24pp_testset/test/en-hu/: test.en-hu.hu
src/llama_recipes/customer_data/wmt24pp_testset/test/en-id/: test.en-id.id
src/llama_recipes/customer_data/wmt24pp_testset/test/en-kn/: test.en-kn.kn
src/llama_recipes/customer_data/wmt24pp_testset/test/en-lt/: test.en-lt.lt
src/llama_recipes/datasets/: translation_dataset.py
src/llama_recipes/inference/: translation_prompt_utils.py
src/llama_recipes/utils/: dataset_utils.py  train_utils.py
(+20 files in other folders)
